kubernetes/base/agent-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-gateway
  namespace: cloudmart
spec:
  replicas: 1
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: agent-gateway
  template:
    metadata:
      labels:
        app: agent-gateway
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
      - name: agent-gateway
        image: ghcr.io/igordems/agent-gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
